# takumi

./: CLAUDE.md  Cargo.toml  LICENSE  flake.nix
src/: crud.rs  field_type.rs  lib.rs  resolve.rs
